<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.list.CharacterListActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_show_favorites"
        android:orderInCategory="200"
        android:title="@string/action_show_favorites_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_everyone"
        android:orderInCategory="300"
        android:title="@string/action_show_everyone_title"
        app:showAsAction="never" />

</menu>