<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/character_image_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/character_image_height"
        android:contentDescription="@string/character_image"
        android:scaleType="centerInside"
        android:transitionName="@string/image_shared_transition_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_marvel_balloon"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/character_text_background"
        android:ellipsize="end"
        android:maxLines="2"
        android:padding="@dimen/margin_normal"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/character_name_text_size"
        android:transitionName="@string/name_shared_transition_key"
        app:layout_constraintBottom_toBottomOf="@+id/character_image_container"
        app:layout_constraintEnd_toEndOf="@+id/character_image_container"
        app:layout_constraintStart_toStartOf="@+id/character_image_container"
        tools:text="This is the name of the character" />

</android.support.constraint.ConstraintLayout>